[package]
name = "rust-parallelfastx"
authors = ["Rayan Chikhi <rayan.chikhi@pasteur.fr>"]
description = "Parallel iteration of FASTA/FASTQ files, for when sequence order doesn't matter but speed does"
version = "0.1.1"
edition = "2021"
keywords = ["bioinformatics"]
categories = ["science", "algorithms"]
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
seq_io= "0.4.0-alpha.0"
memmap2 = "0.5.7"

[dev-dependencies]
criterion = "0.4.0"
quickcheck = "^0.7.1"
rand = "^0.5"


